grammars/fallout-ssl/grammar.js
        source_file: ($) => repeat($._top_level),

        _top_level: ($) =>
            choice(
                $.preprocessor,
                $.procedure_forward,
                $.procedure,
                $.variable_decl,
                $.export_decl,
                $.macro_call_stmt, // Top-level macro invocation
            ),

        // Preprocessor: #define, #include, #ifdef, #ifndef, #endif, #undef, #else, etc.
        procedure_modifier: ($) => choice(kw("pure"), kw("inline")),

        // `critical` is a separate field because it combines with the other two rather than replacing
        // them, and only in this order: `critical pure` is accepted, `pure critical` is not.
        procedure_forward: ($) =>
            seq(
                optional(field("critical", $.procedure_critical)),
                optional(field("modifier", $.procedure_modifier)),
                kw("procedure"),
                field("name", $.identifier),
                optional(field("params", $.param_list)),
                ";",
            ),

        // Procedure definition: procedure name begin ... end
        //
        // `in <constant>` schedules the procedure to fire at that time; `when <expr>` guards it with a
        // condition the engine re-evaluates. They are mutually exclusive and belong to the definition
        // only - a forward declaration carrying either is a syntax error.
        procedure: ($) =>
            seq(
                optional(field("critical", $.procedure_critical)),
                optional(field("modifier", $.procedure_modifier)),
                kw("procedure"),
                field("name", $.identifier),
                optional(field("params", $.param_list)),
                optional(
                    choice(
                        seq(kw("in"), field("timed", $._expression)),
                        seq(kw("when"), field("condition", $._expression)),
                    ),
                ),
                kw("begin"),
                field("body", repeat($._statement)),
                kw("end"),
            ),

        // A trailing comma after the last parameter is accepted, as it is in shipped scripts.
        param_list: ($) => seq("(", optional(seq(commaSep($.param), optional(","))), ")"),

        // SSL parameter defaults are simple values only.
        // Function calls and other compound expressions are not valid here.
        param: ($) =>
            seq(
                kw("variable"),
                field("name", $.identifier),
                optional(seq(choice("=", ":="), field("default", $.param_default))),
            ),

        param_default: ($) =>
            choice($.identifier, $.number, $.boolean, $.string, $.param_default_group, $.param_default_unary),

        variable_decl: ($) =>
            choice(
                // prec.right for the same greedy-semicolon reason as expression_stmt.
                //
                // Known limitation: a BARE ternary initialiser (`variable a := 1 if c else 2`) does not
                // parse; the declaration reduces at `1` and strands the `if`. Telling a ternary from a
                // following if-statement needs lookahead past the condition to `else` versus `then`,
                // and because `;` is optional the two readings are genuinely ambiguous at that point -
                // ternary_expr sits at -1 precisely so `x := 1` followed by a new `if` statement closes
                // the statement instead of being swallowed. Parenthesising works and is what the
                // affected scripts can do; see the corpus allowlist entry.
                prec.right(seq(optional("import"), kw("variable"), commaSep($.var_init), optional(";"))),
                seq(kw("variable"), kw("begin"), repeat(seq(commaSep($.var_init), ";")), "end"),
            ),

        var_init: ($) =>
            seq(
                field("name", choice($.identifier, $.token_paste_identifier)),
                // Static array: `variable a[10]`, or `variable a[10, 2]` where the second constant is the
                // array's flags. Without the flags form the comma ends the declaration and the rest
                // parses as a separate array-literal statement, which is a silent misparse, not an error.
                // The bracket run is dynamically preferred: `variable b[4, 2];` also parses as a bare
                // declaration followed by the array literal `[4, 2]` as its own statement, and without a
                // preference tree-sitter picks that reading in some states and this one in others.
                optional(
                    prec.dynamic(
                        1,
                        seq("[", field("size", $._expression), optional(seq(",", field("flags", $._expression))), "]"),
                    ),
                ),
                optional(seq(choice(":=", "="), field("value", $._expression))),
            ),

        // Export: export variable name := value; (with optional init and optional semicolon)
        export_decl: ($) =>
            prec.right(
                seq(
                    kw("export"),
                    kw("variable"),
                    field("name", $.identifier),
                    optional(seq(choice(":=", "="), field("value", $._expression))),
                    optional(";"),
                ),
            ),

        // Statements
        _statement: ($) =>
            choice(
                $.preprocessor,
                $.variable_decl,
                $.if_stmt,
                $.while_stmt,
                $.for_stmt,
                $.foreach_stmt,
                $.switch_stmt,
                $.return_stmt,
                $.break_stmt,
                $.continue_stmt,
                $.call_stmt,
                $.process_stmt,
                $.assignment,
                $.expression_stmt, // Covers function calls, macro calls, bare identifiers
                $.empty_statement,
                // A bare `begin ... end` block is a statement in its own right, not only a loop or
                // if-branch body. Macros that expand to a block rely on this; without it the `begin`
                // lexes as a bare identifier and the block's `end` closes the enclosing procedure,
                // which mis-parses silently rather than erroring.
                $.block,
            ),

        // A stray `;`, most often a second one after a block's `end`. Accepted rather than an error,
        // since it occurs in shipped scripts and carries no effect.
        if_stmt: ($) =>
            prec.right(
                seq(
                    kw("if"),
                    field("cond", $._expression),
                    kw("then"),
                    field("then", $._stmt_or_block),
                    optional(seq(kw("else"), field("else", $._stmt_or_block))),
                ),
            ),

        while_stmt: ($) => seq(kw("while"), field("cond", $._expression), kw("do"), field("body", $._stmt_or_block)),

        for_stmt: ($) =>
            seq(
                kw("for"),
                "(",
                field("init", optional(choice($.for_var_decl, $.for_init_assign, $._expression))),
                ";",
                field("cond", optional($._expression)),
                ";",
                field("update", optional(choice($.for_update_assign, $._expression))),
                ")",
                field("body", $._stmt_or_block),
            ),

        // Variable declaration in for loop init: variable i = 0
        for_var_decl: ($) =>
            seq(kw("variable"), field("name", $.identifier), choice(":=", "="), field("value", $._expression)),

        // Assignment in for loop init without variable keyword: i = 0
        for_init_assign: ($) => seq(field("name", $.identifier), choice(":=", "="), field("value", $._expression)),

        // Assignment in for loop update: i += 1, i := i + 1, etc. (no trailing semicolon)
        for_update_assign: ($) =>
            seq(
                field("left", choice($.identifier, $.subscript_expr, $.member_expr)),
                choice(":=", "=", "+=", "-=", "*=", "/="),
                field("right", $._expression),
            ),

        // foreach has multiple forms:
        // - foreach var in expr body
        // - foreach k: v in expr body
        // - foreach (var in expr) body  or  foreach (k: v in expr) body
        // The parenthesized form can have optional "while condition" before closing paren.
        // The parentheses are optional and change nothing inside them: `variable`, the `key: value` pair
        // and the trailing `while` guard are available with or without them.
        foreach_stmt: ($) =>
            seq(
                kw("foreach"),
                choice($._foreach_head, seq("(", $._foreach_head, ")")),
                field("body", $._stmt_or_block),
            ),

        // A lone loop variable lands in `key`; with `k: v` the second one is the value. The `while`
        // guard is ANDed into the loop's own bounds test rather than being a separate loop.
        // Right-associative so a `while` after the iterable is taken as the guard rather than as the
        // start of a while-loop body, which is the greedy reading the language's own parser takes.
        _foreach_head: ($) =>
            prec.right(
                seq(
                    optional(kw("variable")),
                    field("key", $.identifier),
                    optional(seq(":", field("value", $.identifier))),
                    kw("in"),
                    field("iter", $._expression),
                    optional(seq(kw("while"), field("while_cond", $._expression))),
                ),
            ),

        switch_stmt: ($) =>
            seq(
                kw("switch"),
                field("value", $._expression),
                kw("begin"),
                repeat($.case_clause),
                optional($.default_clause),
                kw("end"),
            ),

        // `repeat($._statement)` already covers a single `begin ... end` body now that a block is a
        // statement; listing block separately would make every braced clause ambiguous.
        case_clause: ($) => seq(kw("case"), field("value", $._expression), ":", repeat($._statement)),

        default_clause: ($) => seq(kw("default"), ":", repeat($._statement)),

        return_stmt: ($) => seq(kw("return"), optional($._expression), ";"),

        // Process-control statements: the engine runs child scripts, suspends, cancels pending events and
        // marks critical sections through these. They are keywords ONLY here, at the start of a statement,
        // because a script may `#define WAIT (2)` and then use that name in an expression - reserving the
        // word everywhere would turn such a file into a wall of syntax errors.
        break_stmt: ($) => seq(kw("break"), ";"),

        continue_stmt: ($) => seq(kw("continue"), ";"),

        // call procedure_name; or call func(args); or call proc in ticks;
        call_stmt: ($) =>
            seq(
                // SSL keywords are case-insensitive; real scripts write `Call Foo;`. Matched as a plain
                // literal it lexes as an identifier and the statement silently becomes two expression
                // statements rather than a call.
                kw("call"),
                choice(field("target", $.identifier), field("target", $.call_expr)),
                optional(seq(kw("in"), field("delay", $._expression))),
                ";",
            ),

        // Macro invocation at top-level (outside procedures).
        // Preprocessor macros can appear anywhere in SSL code:
        // - At top-level: handled by macro_call_stmt
        // - Inside procedures: handled by expression_stmt (via identifier or call_expr)
        // - Inside expressions: handled by identifier or call_expr
        // This rule is only needed for top-level since expression_stmt isn't in _top_level.
        assignment: ($) =>
            seq(
                field("left", choice($.identifier, $.token_paste_identifier, $.subscript_expr, $.member_expr)),
                choice(":=", "=", "+=", "-=", "*=", "/="),
                field("right", $._expression),
                ";",
            ),

        // prec.right makes the optional `;` greedy, so a semicolon following an expression belongs to
        // it rather than starting an empty_statement.
        //
        // The 1 outranks ternary_expr, and that is a deliberate divergence from the compiler. Given
        // `f(a, b)` on one line and `if (...) then ...` on the next, the compiler continues the
        // expression as a ternary and fails for want of `else`; this grammar reads two statements.
        // The reason is that a macro invocation may omit its `;` because the expansion supplies the
        // terminator - real scripts do this (`Create_Car(HEX, ELEV)` followed by an `if`) - and a macro
        // call is syntactically indistinguishable from a function call, so the two cannot be ranked
        // apart. Erring the other way would reject valid source, which is worse for an editor grammar
        // than missing a diagnostic on invalid source; the compiler still reports it.
        expression_stmt: ($) => prec.right(1, seq($._expression, optional(";"))),

        // Kept as a named alias for readability at loop and if-branch bodies; `block` reaches it
        // through `_statement`, so listing it again here would make every block ambiguous.
        _stmt_or_block: ($) => $._statement,

        block: ($) => seq(kw("begin"), repeat($._statement), kw("end")),

        // Expressions
        _expression: ($) =>
            choice(
                $.ternary_expr,
                $.binary_expr,
                $.unary_expr,
                $.call_expr,
                $.subscript_expr,
                $.member_expr,
                $.paren_expr,
                $.array_expr,
                $.map_expr,
                $.proc_ref,
                $.token_paste_identifier, // ## token-pasting (macro bodies only)
                $.identifier,
                $.number,
                $.boolean,
                $.string,
                $.char,
            ),

        // Ternary expression: value_if_true if condition else value_if_false
        ternary_expr: ($) =>
            prec.right(
                seq(
                    field("true_value", $._expression),
                    kw("if"),
                    field("cond", $._expression),
                    kw("else"),
                    field("false_value", $._expression),
                ),
            ),

        // Procedure reference: @procedure_name
        proc_ref: ($) => seq("@", $.identifier),

        // Array/map subscript access: arr[index]
        subscript_expr: ($) =>
            prec(
                12,
                seq(
                    field("object", choice($.identifier, $.subscript_expr, $.member_expr)),
                    "[",
                    field("index", $._expression),
                    "]",
                ),
            ),

        // Dot notation member access: obj.field
        member_expr: ($) =>
            prec(
                12,
                seq(
                    field("object", choice($.identifier, $.subscript_expr, $.member_expr)),
                    ".",
                    field("member", $.identifier),
                ),
            ),

        // sfall array literal: [1, 2, 3]
        array_expr: ($) => seq("[", optional(commaSep($._expression)), "]"),

        // sfall map literal: {"key": value, ...}
        map_expr: ($) => seq("{", optional(commaSep($.map_entry)), "}"),

        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

        number: ($) => token(choice(/\d+\.\d+/, /\.\d+/, /\d+/, /0x[0-9a-fA-F]+/)),

        comment: ($) => token(seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),
